--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="text_infected">Infected</string>
     <string name="text_death">Death</string>
     <string name="text_recovered">Recovered</string>
+    <string name="text_loading">Loading…</string>
+    <string name="text_plus_information">+%d</string>
 
     <string name="title_statistics">Statistics</string>
     <string name="title_home">Home</string>
