--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="error_get_data_api">First param should not be null, or you forgot passing one</string>
     <string name="error_cash_class">Class not support</string>
 
+    <string name="msg_notification_on">You have turned on notifications</string>
+    <string name="msg_notification_off">You have turned off notification</string>
+
     <string name="radio_button_vietnamese">Vietnamese</string>
     <string name="radio_button_worlds">Worlds</string>
 
@@ -17,11 +20,11 @@
     <string name="text_recovered">Recovered</string>
     <string name="text_loading">Loading…</string>
     <string name="text_plus_information">+%d</string>
+    <string name="text_sort">Sort</string>
+    <string name="text_hint_search_country">Search country…</string>
 
     <string name="title_statistics">Statistics</string>
     <string name="title_home">Home</string>
     <string name="title_news">News</string>
-
-    <string name="msg_notification_on">You have turned on notifications</string>
-    <string name="msg_notification_off">You have turned off notification</string>
+    <string name="title_detail_counties_screen">Detail Countries</string>
 </resources>
