--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <string name="msg_notification_on">You have turned on notifications</string>
     <string name="msg_notification_off">You have turned off notification</string>
+    <string name="msg_search_fail">No result!</string>
 
     <string name="radio_button_vietnamese">Vietnamese</string>
     <string name="radio_button_worlds">Worlds</string>
