--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="msg_notification_on">You have turned on notifications</string>
     <string name="msg_notification_off">You have turned off notification</string>
     <string name="msg_search_fail">No result!</string>
+    <string name="msg_connection_fail">Please check your internet connection!</string>
 
     <string name="radio_button_vietnamese">Vietnamese</string>
     <string name="radio_button_worlds">Worlds</string>
