--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Anti Covid-19</string>
 
+    <string name="button_call_now">call now</string>
+
     <string name="error_parse_json">Type not supported</string>
     <string name="error_get_data_api">First param should not be null, or you forgot passing one</string>
     <string name="error_cash_class">Class not support</string>
@@ -12,6 +14,8 @@
 
     <string name="radio_button_vietnamese">Vietnamese</string>
     <string name="radio_button_worlds">Worlds</string>
+    <string name="radio_button_en">EN</string>
+    <string name="radio_button_vn">VN</string>
 
     <string name="text_all_you_need">All you need</string>
     <string name="text_is_stay_at_home">is stay at home</string>
@@ -25,6 +29,9 @@
     <string name="text_sort">Sort</string>
     <string name="text_hint_search_country">Search country…</string>
     <string name="text_country_code">(%s)</string>
+    <string name="text_symptoms">Symptoms</string>
+    <string name="text_prevention_tips">Prevention tips</string>
+    <string name="text_are_you_fill_sick">Are you fill sick?</string>
 
     <string name="title_statistics">Statistics</string>
     <string name="title_home">Home</string>
